# pginfo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: alternation_depth.h  bfs.h  bfs_info.h  degree.h  dfs.h  dfs_info.h  diameter.h  diamond.h  entanglement.h  girth.h  graph.h  graph_info.h  graph_statistics.h  graph_utilities.h  kellywidth.h  neighbourhood.h  pg.h  pgsolver_io.h  report.h  scc.h  scc_info.h  treewidth.h  utilities.h
include/detail/: scc.h
include/parsers/: .pgsolver.h.swp  pgsolver.h
scripts/: FindMcrl2Utilities.cmake  FindYamlCpp.cmake
src/: example.cpp  pginfo.cpp
test/: CMakeLists.txt  cases.h  unittest.cpp
